Add processing type to payments; External processing integration specs, controllers and routes
